[tool.poetry]
name = "tumblr-url-availability"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU Affero General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
tumblr-noauth = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
